[package]
name = "td-print-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
image = { version = "0.24.6", features = ["png"], default-features=false }
ipp = { version = "4.0.0", features = ["client"], default-features=false }
serialport = "4.2.0"
turbojpeg = { version = "0.5.2", features = ["image"] }

[dependencies.gtk]
version = "0.6"
package = "gtk4"
